--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nihar the Pharmacist | niharportfolio.in</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -100,21 +100,22 @@
   </a>
 
   <!-- Footer -->
-<footer>
-  <p>© 2025 Nihar Ranjan Rout | All rights reserved.</p>
-  <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 12px; font-size: 0.9em; color: #555; margin-top: 10px;">
-    <img src="https://iili.io/38chxcb.jpg" alt="Rashmi" style="width: 32px; height: 32px; border-radius: 50%; object-fit: cover;">
-    <span>Designed & Developed by Rashmi</span>
-    <span>|</span>
-    <a href="tel:+918144929832" style="color: #0077b6; text-decoration: none;">+91 8144929832</a>
-    <span>|</span>
-    <a href="https://instagram.com/rasmi._rrr" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: #0077b6;">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width: 16px; height: 16px; margin-right: 5px;">
-      @rasmi._rrr
-    </a>
-  </div>
-</footer>
+  <footer>
+    <p>© 2025 Nihar Ranjan Rout | All rights reserved.</p>
+    <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 12px; font-size: 0.9em; color: #555; margin-top: 10px;">
+      <img src="https://iili.io/38chxcb.jpg" alt="Rashmi" style="width: 32px; height: 32px; border-radius: 50%; object-fit: cover;">
+      <span>Designed & Developed by Rashmi</span>
+      <span>|</span>
+      <a href="tel:+918144929832" style="color: #0077b6; text-decoration: none;">+91 8144929832</a>
+      <span>|</span>
+      <a href="https://instagram.com/rasmi._rrr" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: #0077b6;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width: 16px; height: 16px; margin-right: 5px;">
+        @rasmi._rrr
+      </a>
+    </div>
+  </footer>
+
   <!-- Script -->
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
