--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nihar the Pharmacist | niharportfolio.in</title>
-  <link rel="stylesheet" href="css/style.css" />
+ <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -116,6 +116,5 @@
   </footer>
 
   <!-- Script -->
-  <script src="script.js"></script>
-</body>
+<script src="js/script.js"></script></body>
 </html>
